<resources>
    <string name="app_name">ASM</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_account">Khác</string>
    <string name="nav_home">Home</string>
    <string name="nav_explore">Explore</string>
    <string name="nav_myProfile">My Profile</string>
    <string name="nav_favorites">Favorites</string>
    <string name="nav_settings">Settings</string>
</resources>