<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item
            android:id="@+id/nav_home"
            android:title="@string/nav_home"
            android:icon="@drawable/alarm"/>

        <item
            android:id="@+id/nav_explore"
            android:title="@string/nav_explore"
            android:icon="@drawable/alarm"/>

        <item
            android:id="@+id/nav_Pmyrofile"
            android:title="@string/nav_myProfile"
            android:icon="@drawable/alarm"/>
    </group>

    <item android:title="@string/nav_account">
        <menu>
            <item
                android:id="@+id/nav_favorites"
                android:title="@string/nav_favorites"
                android:icon="@drawable/alarm"/>

            <item
                android:id="@+id/nav_settings"
                android:title="@string/nav_settings"
                android:icon="@drawable/alarm"/>

        </menu>
    </item>
</menu>